issueNo: I4CY9Y Description: add media query capability for lite ace Feature or Bugfix:Feature Binary Source:No
Signed-off-by: youzhi92 <chenyouzhi@huawei.com>
Change-Id: If9edd6f6ae21ca7504c4c1cd2f98a3563e8957bb

--- a/ace-loader/test/lite/testcase/pages/exteriorStyle/exteriorStyle.css
+++ b/ace-loader/test/lite/testcase/pages/exteriorStyle/exteriorStyle.css
@@ -82,3 +82,19 @@
   height: 30%;
   width: 100%;
 }
+
+/* exteriorStyle_Compiler_Test_013 */
+@media screen and (max-width: 454px) {
+  .title {
+    font-size: 30px;
+    color: #f00;
+  }
+}
+
+/* exteriorStyle_Compiler_Test_014 */
+@media screen and (min-width: 455px) {
+  .title {
+    font-size: 72px;
+    color: #0f0;
+  }
+}
